Found the source of the bug when the cursor jumps on backspace in Gecko/Firefox
The way Firefox manages the cursor is deferent than Chromium and WebKit; Firefox selects an entire node (element) as supposed to the innermost node, which confuses getPosFromRange.

--- a/src/components/Editor/Components.css
+++ b/src/components/Editor/Components.css
@@ -1,3 +1,6 @@
+/* @import "https://fonts.googleapis.com/css?family=Fira+Code&display=block"; */
+/* @import "https://cdn.jsdelivr.net/gh/codex-src/iA-Fonts@master/iA%20Writer%20Duo/Webfonts/index.css"; */
+/* @import "https://cdn.jsdelivr.net/gh/codex-src/iA-Fonts@master/iA%20Writer%20Quattro/Webfonts/index.css"; */
 @import "https://cdn.jsdelivr.net/gh/codex-src/iA-Fonts@master/iA%20Writer%20Mono/Webfonts/index.css";
 
 article {
@@ -97,6 +100,7 @@ code {
 }
 
 .code {
+	vertical-align: 1px;
 	color: hsl(var(--blue-a400));
 	box-shadow: var(--box-shadow);
 }
